Kubernetes/service-2.yml
# service-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: my-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: ghcr.io/l-sypniewski/hello-containers-arm:latest
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: ghcr-login-secret
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: my-namespace
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service2
  type: ClusterIP
