Kubernetes/service-3.yml
# service-3.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
  namespace: bookclub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
        - name: service3
          image: ghcr.io/l-sypniewski/hello-containers-arm:latest
          ports:
            - name: http
              containerPort: 80
      imagePullSecrets:
        - name: ghcr-login-secret
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: service3
  namespace: bookclub
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: service3
  type: ClusterIP
