Kubernetes/ingress.yaml
# ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: my-namespace
  name: nginx-ingress-microk8s
  labels:
    app: nginx-ingress-microk8s
  annotations:
    nginx.ingress.kubernetes.io/default-backend: service1 # Doesn't seem to be working
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # /$1 is needed to be able to reach controller's actions in sub-routes, e.g. users/all or users/{id}
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
spec:
  ingressClassName: nginx # Without this 404 not found page from nginx is returned
  rules:
    - host: "<MY-DOMAIN.COM>"
      http:
        paths:
          - pathType: Prefix
            path: "/service1(.*)" # /(.*) is needed to be able to reach controller's actions in sub-routes, e.g. users/all or users/{id}
            backend:
              service:
                name: service1
                port:
                  number: 80
    - host: "<MY-DOMAIN.COM>"
      http:
        paths:
          - pathType: Prefix
            path: "/service2(.*)"
            backend:
              service:
                name: service2
                port:
                  number: 80
          - pathType: Prefix
            path: "/service3(.*)"
            backend:
              service:
                name: service3
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  loadBalancerIP: 192.168.1.220
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
